--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>my-future</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+    </dependencies>
 </project>
